--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Simple Landing Page</title>
+        <link
+            rel="icon"
+            href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>  <style> :root { --primary-color: #dad2dc; } /* Fallback color */ rect { fill: var(--primary-color); } </style><rect width='100' height='100'/></svg>"
+        />
+        <title>Toby Hodges</title>
         <style>
             :root {
                 --primary-color: #dad2dc;
