--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             }
 
             body {
-                font-family: Helvetica, Arial, sans-serif;
+                font-family: Helvetica, sans-serif;
                 background-color: var(--primary-color);
                 margin: 0;
                 padding: 3rem;
@@ -67,7 +67,7 @@
             <div class="column-wrapper">
                 <div class="column">
                     <p class="card">
-                        <strong>Hi, I'm Toby Hodges</strong>. Nice to meet you.
+                        <strong>Hi, I’m Toby Hodges</strong>. Nice to meet you.
                     </p>
                     <p class="card">
                         <strong>I build software</strong>
