--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
             .column {
                 container-type: inline-size;
             }
+
+            .footer {
+                text-align: center;
+                color: #8b7b8f;
+            }
         </style>
     </head>
     <body>
@@ -157,6 +162,7 @@
                     </p>
                 </div>
             </div>
+            <div class="footer">© 2025 Toby Hodges</div>
         </div>
     </body>
 </html>
