--- a/index.html
+++ b/index.html
@@ -89,13 +89,17 @@
                         you check back soon, you'll find more content. In the
                         meantime, feel free to continue reading about my work
                         and who I am. If you want to reach out, please use the
-                        contact card below.
+                        contact card below, or you can download my resume for
+                        sharing.
                     </p>
                     <p class="card">
                         <strong>Contact Me</strong>:
                         <a href="mailto:hello@tobyhodges.me">Email</a>
                         <a href="https://linkedin.com/in/tobyhodges"
                             >LinkedIn</a
+                        >
+                        <a href="https://tobyhodges.me/resume-2025.pdf"
+                            >Resume</a
                         >
                     </p>
                 </div>
