--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
 
                 <div class="column">
                     <p class="card">
-                        <strong>I work at Autodesk</strong> as a Senior Software
-                        Engineer. There, I build the platform that enables
-                        thousands of developers to deploy, manage, and observe
-                        their applications. One of my stand-out projects is
-                        creating a vendor-agnostic Resilience API Group by
+                        <strong>I work at Autodesk</strong> as a Principal
+                        Software Engineer. There, I build the platform that
+                        enables thousands of developers to deploy, manage, and
+                        observe their applications. One of my stand-out projects
+                        is creating a vendor-agnostic Resilience API Group by
                         extending Kubernetes on our internal control plane. The
                         API Group, which includes SLO, SLI, Datasource, and
                         Alert Policy, Condition, and Notification Target APIs,
