use en dashes correctly

--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
                         maintainer for our innersource internal control plane.
                     </p>
                     <p class="card">
-                        <strong>Previous to my current work</strong>, from 2019
-                        – 2022 I worked as an Infrastructure Engineer at Kaiser
-                        Permanente. There, I managed the cloud infrastructure
-                        for the KP Membership Connect platform.
+                        <strong>Previous to my current work</strong>, from
+                        2019–2022 I worked as an Infrastructure Engineer at
+                        Kaiser Permanente. There, I managed the cloud
+                        infrastructure for the KP Membership Connect platform.
                     </p>
                 </div>
 
@@ -153,7 +153,7 @@
                         <strong>I was recently accepted</strong> to the Portland
                         State University Urban Design Graduate Certificate
                         Program. I plan on attending the program in the Winter
-                        of 2025 – 2026. I am particularly excited about this
+                        of 2025–2026. I am particularly excited about this
                         opportunity, because it will connect my software
                         engineering expertise with my desire to help create
                         wonderful spaces.
@@ -163,7 +163,7 @@
                         including Certified Kubernetes Application Developer
                         (CKAD), Certified ArgoCD Project Associate (CAPA), and
                         Prometheus Certified Associate (PCA). I earned these in
-                        late 2024 – early 2025, and I plan to keep them
+                        late 2024–early 2025, and I plan to keep them
                         up-to-date.
                     </p>
                 </div>
