--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
                         for our customers to be able to utilize any
                         observability vendor offered by the platform without
                         modifying their GitOps configurations. I am also a
-                        maintainer for our innersource internal control plane.
+                        maintainer for our innersource internal control plane. I
+                        was promoted from Senior to Principal in early 2025.
                     </p>
                     <p class="card">
                         <strong>Previous to my current work</strong>, from
