--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                         observe their applications. One of my stand-out projects
                         is creating a vendor-agnostic Resilience API Group by
                         extending Kubernetes on our internal control plane. The
-                        API Group, which includes SLO, SLI, Datasource, and
-                        Alert Policy, Condition, and Notification Target APIs,
-                        follows
+                        API Group, which includes SLO, SLI, Synthetic Check,
+                        Datasource, and Alert Policy, Condition, and
+                        Notification Target APIs, follows
                         <a href="https://github.com/OpenSLO/OpenSLO">
                             open conventions</a
                         >
