--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
             rel="icon"
-            href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>  <style> :root { --primary-color: #dad2dc; } /* Fallback color */ rect { fill: var(--primary-color); } </style><rect width='100' height='100'/></svg>"
+            href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>  <style> :root { --primary-color: #ccdade; } /* Fallback color */ rect { fill: var(--primary-color); } </style><rect width='100' height='100'/></svg>"
         />
         <title>Toby Hodges</title>
         <style>
             :root {
-                --primary-color: #dad2dc;
+                --primary-color: #ccdade;
+                --secondary-color: #4a6169;
             }
 
             body {
@@ -63,7 +64,7 @@
 
             .footer {
                 text-align: center;
-                color: #8b7b8f;
+                color: var(--secondary-color);
             }
         </style>
     </head>
@@ -100,7 +101,7 @@
                             >LinkedIn</a
                         >
                         ·
-                        <a href="https://tobyhodges.me/resume-2025.pdf"
+                        <a href="./static/resume-2025.pdf"
                             >Resume</a
                         >
                     </p>
@@ -137,6 +138,8 @@
                         2019–2022 I worked as an Infrastructure Engineer at
                         Kaiser Permanente. There, I managed the cloud
                         infrastructure for the KP Membership Connect platform.
+                        Before that, I worked at the Oregon State Open Source
+                        Lab and at Oregon State Open Educational Resources.
                     </p>
                 </div>
 
